# SpaceX_project

./: .gitignore  README.md  main.py  pyproject.toml  spacex_api.py
dbt/spacex_project/models/example/: launches.sql  rocket.sql  schema.yml
sql/: sql_queries.sql
tap-spacex/: output.json  tap_spacex.py
